# secureMessagingApp

./: CMakeLists.txt  build.sh
fidl/: server.fdepl  server.fidl
libs/: CMakeLists.txt
libs/capicxx-core-runtime/: CMakeLists.txt
libs/cryptoHandler/include/: keyHandler.hpp
libs/cryptoHandler/src/: CMakeLists.txt  cryptoHandlerMain.cpp  keyHandler.cpp
libs/vsomeip/examples/hello_world/: helloworld-local.json
libs/vsomeip/serviceExample/: service-example.cpp
services/client/include/: client.hpp
services/client/src/: CMakeLists.txt  client.cpp  clientMain.cpp
services/server/include/: server.hpp
services/server/src/: CMakeLists.txt  server.cpp  serverMain.cpp
