cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(secureMessageTransfer)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/build/usr)
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory(libs)
add_subdirectory(services/server)
add_subdirectory(services/client)